# sailtracker

./: .claudeignore  .env.example  .gitignore  BLUEPRINT.md  CLAUDE.md  README.md  TEST_REPORT.md  ais_collector.py  anchor.sh  briefing.py  config.py  daily_briefing.py  forecast_verifier.py  grib_collector.py  inreach_collector.py  landmask.py  passage_planner.py  patch_server.py  polar_calibrator.py  polar_templates.py  polars.py  requirements.txt  routing.py  rust_engine.py  server.py  telegram_utils.py  utils.py  watchdog.py  weather_collector.py  wind_alert_monitor.py
.claude/: project-state.md
blueprints/: analysis.py  auth.py  logbook.py  passage.py  sailing.py  shared.py  system.py  tracking.py  weather.py  web.py
data/polars/: pollen1_default.csv
engine/: Cargo.toml  build.rs
engine/src/: ensemble.rs  geo.rs  landmask.rs  main.rs  optimize.rs  polar.rs  route.rs  score.rs  types.rs
static/: index.html  index_mobile.html  manifest-quart.json  manifest.json  passage.html  sw.js
templates/: accuracy.html  analysis.html  base.html  fleet.html  invite_codes.html  logbook.html  login.html  passage_lite.html  polars.html  profile.html  quart.html  register.html  replay.html
tests/: test_routes.py
