[package]
name = "sailtracker-engine"
version = "1.0.0"
edition = "2021"
description = "Moteur de calcul haute performance pour SailTracker"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rayon = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
