[package]
name = "sailtracker-engine"
version = "1.0.0"
edition = "2021"
description = "Moteur de calcul haute performance pour SailTracker"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rayon = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
geocrate = { package = "geo", version = "0.28" }
geojson = "0.24"
rstar = "0.12"
once_cell = "1"
bincode = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
